--- a/package.json
+++ b/package.json
@@ -32,13 +32,19 @@
     "ember-cli-jshint": "^1.0.0",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-cp-validations": "3.0.0-beta.3",
     "ember-data": "^2.6.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-material-design-icons-shim": "0.1.9",
+    "ember-materialize-shim": "0.2.3",
     "ember-resolver": "^2.0.3",
+    "ember-route-action-helper": "0.3.3",
     "ember-welcome-page": "^1.0.1",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "node-sass": "3.8.0"
   }
 }
